# twapi-oauth2-rs

./: CHANGELOG.md  Cargo.toml  README.md  twapi-oauth2-rs.code-workspace
examples/oauth-web/: Cargo.toml
examples/oauth-web/src/: main.rs
examples/oauth-web1a/: Cargo.toml
examples/oauth-web1a/src/: main.rs
src/: error.rs  lib.rs  oauth1a.rs  oauth2.rs  x.rs
src/oauth1a/: calc_oauth1a.rs
