[package]
name = "twapi-oauth2"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
query-string-builder = "0.6.0"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "query", "form"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
url = "2.5.8"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros"] }