[package]
name = "twapi-oauth2"
version = "0.2.0"
edition = "2024"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "Twitter API v2 library."
repository = "https://github.com/aoyagikouhei/twapi-oauth2-rs"
keywords = ["twitter", "oauth"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/twapi-oauth2"

[dependencies]
base64 = "0.22"
query-string-builder = "0.6"
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "query", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
url = "2"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros"] }