[package]
name = "twapi-oauth2"
version = "0.4.0"
edition = "2024"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "Twitter API v2 library."
repository = "https://github.com/aoyagikouhei/twapi-oauth2-rs"
keywords = ["twitter", "oauth"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/twapi-oauth2"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = [ "serde" ] }
form_urlencoded = { version = "1.2", optional = true }
hmac = { version = "0.12", optional = true }
query-string-builder = { version = "0.6", optional = true }
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "query", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros"] }

[features]
default = ["oauth2"]
oauth1a = ["hmac", "form_urlencoded", "sha1"]
oauth2 = ["query-string-builder", "sha2"]